Replace new PrimBoxType() with PrimBoxType.valueOf()