@@ -328,9 +328,9 @@ public class MockCachedUrlSet implements CachedUrlSet {
   public void signalCacheAttempt(String url) {
     Integer numTimesCached = (Integer) cacheAttempts.get(url);
     if (numTimesCached == null) {
-      cacheAttempts.put(url, new Integer(1));
+      cacheAttempts.put(url, Integer.valueOf(1));
     } else {
-      cacheAttempts.put(url, new Integer(numTimesCached.intValue()+1));
+      cacheAttempts.put(url, Integer.valueOf(numTimesCached.intValue()+1));
     }
   }
   public int getNumCacheAttempts(String url) {
