@@ -59,11 +59,11 @@ public class TestOrderedObject extends LockssTestCase {
 
   public void testGets() {
     OrderedObject o1 = new OrderedObject("foo", 3);
-    OrderedObject o2 = new OrderedObject(new Integer(123), 5);
-    OrderedObject o3 = new OrderedObject("a", new Integer(33));
+    OrderedObject o2 = new OrderedObject(Integer.valueOf(123), 5);
+    OrderedObject o3 = new OrderedObject("a", Integer.valueOf(33));
     assertEquals("foo", o1.getValue());
     assertEquals("foo", o1.toString());
-    assertEquals(new Integer(3), o1.getOrder());
+    assertEquals(Integer.valueOf(3), o1.getOrder());
     assertEquals("123", o2.toString());
     OrderedObject o4 = new OrderedObject("bar");
     assertEquals("bar", o4.getOrder());
@@ -73,7 +73,7 @@ public class TestOrderedObject extends LockssTestCase {
   public void testSort() {
     OrderedObject o1 = new OrderedObject("foo", 3);
     OrderedObject o2 = new OrderedObject("bar", 5);
-    OrderedObject o3 = new OrderedObject("a", new Integer(33));
+    OrderedObject o3 = new OrderedObject("a", Integer.valueOf(33));
     List exp = ListUtil.list(o1, o2, o3);
     List test = ListUtil.list(o3, o2, o1);
     Collections.sort(test);
