@@ -51,7 +51,7 @@ public class TestPriorityQueue extends LockssTestCase {
   };
 
   String O1 = "foo";
-  Integer O2 = new Integer(42);
+  Integer O2 = Integer.valueOf(42);
 
   public TestPriorityQueue(String msg) {
     super(msg);
